--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,7 @@ ul.social {
     background-color: #f8f8f8;
     margin: 0 auto;
     border-bottom: 1px solid #f3f3f3;
+    max-width: 540px;
   }
   .nav-item {
     padding: 0 1em;
@@ -192,6 +193,23 @@ ul.social {
   }
   .container {
     max-width: none;
+  }
+  .navbar .container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .nav-container {
+    width: 540px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .dropdown-menu {
     border: inherit;
